--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -37,7 +37,7 @@
               <div class="card" style="width: 20rem;">
                   <div class="card-body">
                     <h4 class="card-title">{{ item.title }}</h4>
-                    <img src = {{ item.img_url }}>          
+                    <img src = {{ item.img_url }} style="width:200px;height:200px;">          
                   </div>
                 </div>
           </div>
